src/objects/EmailAddressToBanner__c.object
<CustomObject>
    <description>A control object for the synchronization between Banner table general.goremal and Salesforce object Email Address</description>
    <fields>
        <fullName>ContactIdIN__c</fullName>
        <label>Contact Id (IN)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAddressIN__c</fullName>
        <externalId>true</externalId>
        <label>Email Address (IN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Email Address object that this sync records connects to in Salesforce.</description>
        <label>Email Address</label>
        <referenceTo>EmailAddress__c</referenceTo>
        <relationshipLabel>Email Addresses To Banner</relationshipLabel>
        <relationshipName>EmailAddressesToBanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailCodeIN__c</fullName>
        <label>Email Code (IN)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDMIN__c</fullName>
        <label>PIDM (IN)</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryEmailIN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Email (IN)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResynchronizeToSalesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resynchronize to Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusIndicatorIN__c</fullName>
        <label>Status Indicator (IN)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SynchronizationError__c</fullName>
        <label>Synchronization Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email Address To Banner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Errors</fullName>
        <columns>NAME</columns>
        <columns>EmailAddressIN__c</columns>
        <columns>EmailAddress__c</columns>
        <columns>SynchronizationError__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SynchronizationError__c</field>
            <operation>notEqual</operation>
            <value>None</value>
        </filters>
        <filters>
            <field>SynchronizationError__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Errors</label>
        <sharedTo>
            <role>ITHelpDesk</role>
            <role>IT_Group</role>
            <role>QATeam</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>emailsync-{0}</displayFormat>
        <label>Email Address To Banner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Addresses To Banner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>